Squelette et contenu en place, reste finition CSS

--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ APP_SECRET=f2747a343f305411c3f31d51c1d64b86
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+GOOGLE_RECAPTCHA_SITE_KEY=6Lf4hbwZAAAAAG1xqMdzdSOFL2NtmKReoccqq1wh
+GOOGLE_RECAPTCHA_PRIVATE_KEY=6Lf4hbwZAAAAAFvaihjn8THgniDh_SGW1mVx5kYP
