--- a/.env
+++ b/.env
@@ -14,12 +14,12 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=f2747a343f305411c3f31d51c1d64b86
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://contact@dounia-manhouli.fr:Endomok.71@ssl0.ovh.net:587
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -33,3 +33,11 @@ DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVers
 
 GOOGLE_RECAPTCHA_SITE_KEY=6Lf4hbwZAAAAAG1xqMdzdSOFL2NtmKReoccqq1wh
 GOOGLE_RECAPTCHA_PRIVATE_KEY=6Lf4hbwZAAAAAFvaihjn8THgniDh_SGW1mVx5kYP
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
+
+#TODO: A changer pour dounia-manhouli.fr
+DOMAIN=http://localhost:8000
